@@ -1,5 +1,6 @@
   [Michele Simionato]
-  * Parallelized the splitting of the heavy sources
+  * Now the dbserver can be stopped correctly with CTRL-C
+  * Parallelized the splitting of heavy sources
   * Removed the dependency from the Django ORM
   * Now the WebUI restarts the ProcessPoolExecutor at the end of each job,
     to conserve resources
